deployment/deployment_503.yml
apiVersion: v1
kind: Service
metadata:
  name: pyserver
  labels:
    app: pyserver
spec:
  ports:
  - name: pyserver
    port: 80
    targetPort: 5000
  selector:
    app: pyserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyserver
  labels:
    app: pyserver
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyserver
      version: v1
  template:
    metadata:
      labels:
        app: pyserver
        version: v1
    spec:
      containers:
      - image: py_server:latest
      # - image: py_server200:latest
        imagePullPolicy: IfNotPresent
        name: pyserver
        ports:
        - name: pyserver
          containerPort: 5000
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyserver503
  labels:
    app: pyserver
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyserver
  template:
    metadata:
      labels:
        app: pyserver
        version: v2
    spec:
      containers:
      - name: pyserver
        image: py_server503:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: pyserver
          containerPort: 5003
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: governmentpaas/curl-ssl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
