deployment/load_testing_tool.yml
# a load testing tool
# usage example 
# get the pod of the load tester
# export FORTIO_POD=$(kubectl get pods -lapp=fortio -n circuitbreaker -o 'jsonpath={.items[0].metadata.name}')
# run the load test
# kubectl exec "$FORTIO_POD" -c fortio -n circuitbreaker -- /usr/bin/fortio load -c 3 -qps 0 -n 100 -loglevel Warning http://pyserver/index
# get the stats
# kubectl exec "$FORTIO_POD" -n circuitbreaker -c istio-proxy -- pilot-agent request GET stats | grep pyserver


apiVersion: v1
kind: Service
metadata:
  name: fortio
  labels:
    app: fortio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fortio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      annotations:
        # This annotation causes Envoy to serve cluster.outbound statistics via 15000/stats
        # in addition to the stats normally served by Istio.  The Circuit Breaking example task
        # gives an example of inspecting Envoy stats.
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest_release
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
