deployment/bad.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pyserver
spec:
  hosts:
    - pyserver
  http:
  - route:
    - destination:
        host: pyserver
        subset: v1
      weight: 50
    - destination:
        host: pyserver
        subset: v2
      weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pyserver
spec:
  host: pyserver
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
        # simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
        # simple: ROUND_ROBIN
