deployment/destination_fail_fast.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pyserver
spec:
  host: pyserver
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 5
      http:
        http1MaxPendingRequests: 1
