deployment/destination_max_5.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pyserver
spec:
  host: pyserver
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 5
